# aoc-2025

./: .gitignore  CMakeLists.txt  day1.c  day3.c  day4.c
common/: grid.c  grid.h
input/samples/: day5_1.txt
input/tests/: day10_1.txt
src/: day10.c  day11.c  day2.c  day5.c  day6.c  day7.c  day8.c  day9.c
